--- a/DataMS/src/main/resources/application.yml
+++ b/DataMS/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
       
       
 storage:
-  path: M:\Vs Code\Java\DataRepoFacebook\
+  path: M:\Vs Code\Facebook\DataRepo\
 
 SERVICE:
   NOT_FOUND: File not found!
